feat: update card wash animation flow

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "bits-ui": "^2.15.5",
     "clsx": "^2.1.1",
+    "gsap": "^3.14.2",
     "lucide-svelte": "^0.563.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
